updated latest route to work with data driven layout

--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -18,3 +18,20 @@ body {
     text-transform: uppercase;
   }
 }
+
+.posts-container {
+  display: grid;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.post {
+  background: #fff;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+
+  &:hover {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+}
